# ctci

./: CMakeLists.txt  README.md
include/arrays_and_strings/: arrays_and_strings.h
include/linked_lists/: linked_list.h  linked_lists.h
include/stacks_and_queues/: animal_shelter.h  my_queue.h  set_of_stacks.h  stacks_and_queues.h  three_stack.h
include/trees_and_graphs/: graph.h  trees_and_graphs.h
include/utils/: merge_sort.h  quick_sort.h  stack.h  utils.h
src/arrays_and_strings/: check_permutation.cpp  is_unique.cpp  one_away.cpp  palindrome_permutation.cpp  rotate_matrix.cpp  string_compression.cpp  string_rotation.cpp  urlify.cpp  zero_matrix.cpp
src/linked_lists/: delete_middle_node.cpp  intersection.cpp  loop_detection.cpp  palindrome.cpp  partition.cpp  remove_dups.cpp  return_kth_to_last.cpp  sum_lists.cpp
src/stacks_and_queues/: animal_shelter.cpp  my_queue.cpp  set_of_stacks.cpp  sort.cpp
src/trees_and_graphs/: route_between_nodes.cpp
test/: test_arrays_and_strings.cpp  test_linked_lists.cpp  test_stacks_and_queues.cpp  test_trees_and_graphs.cpp  test_utils.cpp
